--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 <section class="profile">
-<img src="images/ava.jpg">
+<img src="repo/ava.jpg">
 <h1>Вероника Резникова</h1>
 <h2>Модель и блогер</h2>
 <p>Я заканчиваю МКИК, живу в Жуковском и работаю в Москве.</p>
@@ -21,13 +21,13 @@
 </header>
 <main>
 <section class="ills">
-<img src="images/ill1.jpg">
-<img src="images/ill2.jpg">
-<img src="images/ill3.jpg">
+<img src="repo/3.jpg">
+<img src="repo/10.jpg">
+<img src="repo/19.jpg">
 </section>
 <section class="portfolio">
 <article id="card_2">
-<img src="images/r2.jpg">
+<img src="repo/3.jpg">
 <h3>Медиа сфера</h3>
 <p>Моя карьера в интернете</p>
 <a href="2.html">Читать</a>
