--- a/2.html
+++ b/2.html
@@ -4,7 +4,7 @@
 <title>Медиа сфера</title>
 <link href="style.css" type="text/css"  rel="stylesheet">
 <meta charset="utf-8">
-<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="shortcut icon" type="repo/x-icon" href="repo/favicon.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
 <header>
 <section class="profile"> 
-<img src="images/ava.jpg">
+<img src="repo/ava.jpg">
 <h1>Вероника Резникова</h1>
 <h2>Модель и блогер</h2>
 <p>Я заканчиваю МКИК, живу в Жуковском и работаю в Москве.</p>
@@ -20,10 +20,10 @@
 </section>
 </header>
 <main class="read">
-<a href="index.html" class="back"><img src="images/arrow.svg"> назад</a>
+<a href="index.html" class="back"><img src="repo/arrow.svg"> назад</a>
 
-<img src="images/1v.jpg">
-<img src="images/2v.jpg">
+<img src="repo/10.jpg">
+<img src="repo/19.jpg">
 <h1>Медиа сфера</h1>
 
 <p>
